# bankservice

./: .env.example  README.md  docker-compose.yml  manage.py  pyproject.toml  pytest.ini
apps/api/: urls.py
apps/api/organizations/: serializers.py  urls.py  views.py
apps/api/webhooks/: urls.py
apps/api/webhooks/bank/: serializers.py  views.py
apps/common/: constants.py
apps/organizations/: admin.py  models.py
apps/organizations/migrations/: 0001_initial.py
apps/payments/: models.py  services.py
apps/payments/migrations/: 0001_initial.py
bankservice/: asgi.py  settings.py  urls.py  wsgi.py
docs/: index.html  schema.yaml
tests/api/: conftest.py  test_organizations.py
tests/api/webhooks/: conftest.py  test_bank_webhook.py
